since 1.3
=========
- Implement save/load Oasis format
- Allow to sort without respect case
- allow editing/removing of links
- fixed bug 76861: bad rendering of hyperlink
- Validation: allow to display or not message
- Add new dcop function
- Start to port KSpread_undo to kcommand
- Add combobox to search area name
- Add Help Message as in oocalc
- multiple steps undo and redo
- fix problem where hidden sheet is simply appended in the tab bar
  (when it is shown again).
- fix bug #81026: SUMIF() function added
- sheet layout direction can be explicitly set (fix bug #46831)
- new dependency manager
- prevent a very wide Insert Link dialog
- fix bug #59291: potential crash on loading new template

changes for 1.3.4
=================
- fix bug #87369: ctrl+C in formula bar doesn't copy contents

changes for 1.3.3
=================
- fix bug #78747: problem with duration format (hh:mm:ss)
- fix bug #74091: wrong special paste from cell with formula
- fix bug #76679: time shown with one second offset

changes for 1.3.2
=================
- fix condition cell attribute (multi condition)
- fix bug #69798: SEXDEC parse error
- fix enable/disable action into validation dialogbox
- fix disable/enable "show table" menu item
- fix bug #69066: crash when viewing a KSpread document in Konqueror

changes for 1.3.1
=================
- fix bug #77844: undo not working after deleting multiple cells
- fix bug #45822: fixed crash when opening a file over the network

since 1.3 RC1
=============
- fix display of text starting with a single quote
- fix problem formatting the whole row (#65504)
- make the top/middle/bottom alignment buttons work
- fix problem with reference from another sheet (bug #60455)
- show indicator of chosen/selected cells (bug #58098)
- hide in-place cell editing when choosing other sheet
- proper zoom and display of formatted hyperlink (#66214)
- fix flickering problem with many hyperlinks (#65501)
- don't crash when leaving the preview in Konq (#65928)